--- a/.codecov.yml
+++ b/.codecov.yml
@@ -58,6 +58,10 @@ coverage:
         target: 75
         flags:
         - argocd
+      Argo_Rollouts:
+        target: 75
+        flags:
+        - argo_rollouts
       Avi_Vantage:
         target: 75
         flags:
@@ -700,6 +704,11 @@ flags:
     paths:
     - arangodb/datadog_checks/arangodb
     - arangodb/tests
+  argo_rollouts:
+    carryforward: true
+    paths:
+    - argo_rollouts/datadog_checks/argo_rollouts
+    - argo_rollouts/tests
   argocd:
     carryforward: true
     paths:
