manifest metric to check

--- a/argo_rollouts/manifest.json
+++ b/argo_rollouts/manifest.json
@@ -36,7 +36,7 @@
       },
       "metrics": {
         "prefix": "argo_rollouts.",
-        "check": "",
+        "check": "argo_rollouts.go.threads",
         "metadata_path": "metadata.csv"
       },
       "service_checks": {
