--- a/mysql/assets/configuration/spec.yaml
+++ b/mysql/assets/configuration/spec.yaml
@@ -128,6 +128,7 @@ files:
                       type: gauge
                   tags:
                     - test:mysql
+                  metric_prefix: mysql
           - name: additional_status
             description: |
               Set this parameter to collect additional MySQL status variables as metrics
