--- a/oracle/datadog_checks/oracle/data/conf.yaml.example
+++ b/oracle/datadog_checks/oracle/data/conf.yaml.example
@@ -153,6 +153,7 @@ instances:
     ##     If the collection interval is greater than check collection interval, 
     ##     the query will NOT BE RUN exactly at the collection interval.
     ##     The query will be run at the next check run after the collection interval has passed.
+    ## 5. metric_prefix (optional) - The prefix to apply to each metric.
     #
     # custom_queries:
     #   - query: SELECT foo, COUNT(*) FROM table.events GROUP BY foo
@@ -164,6 +165,7 @@ instances:
     #     tags:
     #     - test:<INTEGRATION>
     #     collection_interval: 30
+    #     metric_prefix: foo_prefix
 
     ## @param tags - list of strings - optional
     ## A list of tags to attach to every metric and service check emitted by this instance.
