--- a/mysql/datadog_checks/mysql/data/conf.yaml.example
+++ b/mysql/datadog_checks/mysql/data/conf.yaml.example
@@ -162,6 +162,7 @@ instances:
     ##     If the collection interval is greater than check collection interval, 
     ##     the query will NOT BE RUN exactly at the collection interval.
     ##     The query will be run at the next check run after the collection interval has passed.
+    ## 5. metric_prefix (optional) - The prefix to apply to each metric.
     #
     # custom_queries:
     #   - query: SELECT foo, COUNT(*) FROM table.events GROUP BY foo
@@ -172,6 +173,7 @@ instances:
     #       type: gauge
     #     tags:
     #     - test:mysql
+    #     metric_prefix: mysql
 
     ## @param additional_status - list of mappings - optional
     ## Set this parameter to collect additional MySQL status variables as metrics
