--- a/sap_hana/datadog_checks/sap_hana/data/conf.yaml.example
+++ b/sap_hana/datadog_checks/sap_hana/data/conf.yaml.example
@@ -145,6 +145,7 @@ instances:
     ##     If the collection interval is greater than check collection interval, 
     ##     the query will NOT BE RUN exactly at the collection interval.
     ##     The query will be run at the next check run after the collection interval has passed.
+    ## 5. metric_prefix (optional) - The prefix to apply to each metric.
     #
     # custom_queries:
     #   - query: SELECT foo, COUNT(*) FROM table.events GROUP BY foo
@@ -156,6 +157,7 @@ instances:
     #     tags:
     #     - test:<INTEGRATION>
     #     collection_interval: 30
+    #     metric_prefix: foo_prefix
 
     ## @param persist_db_connections - boolean - optional - default: true
     ## Whether or not to persist database connections.
