--- a/singlestore/datadog_checks/singlestore/data/conf.yaml.example
+++ b/singlestore/datadog_checks/singlestore/data/conf.yaml.example
@@ -120,6 +120,7 @@ instances:
     ##     If the collection interval is greater than check collection interval, 
     ##     the query will NOT BE RUN exactly at the collection interval.
     ##     The query will be run at the next check run after the collection interval has passed.
+    ## 5. metric_prefix (optional) - The prefix to apply to each metric.
     #
     # custom_queries:
     #   - query: SELECT foo, COUNT(*) FROM table.events GROUP BY foo
@@ -131,6 +132,7 @@ instances:
     #     tags:
     #     - test:<INTEGRATION>
     #     collection_interval: 30
+    #     metric_prefix: foo_prefix
 
     ## @param collect_system_metrics - boolean - optional - default: false
     ## Collect additional system metrics from the MV_SYSINFO_* tables. Disabled by default to limit
