Update pipeline to rename the attribute path and update dashboards

--- a/checkpoint_quantum_firewall/assets/dashboards/checkpoint_quantum_firewall_application_control.json
+++ b/checkpoint_quantum_firewall/assets/dashboards/checkpoint_quantum_firewall_application_control.json
@@ -610,7 +610,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@app_category",
+                                        "facet": "@checkpoint.quantum.firewall.app_category",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -672,7 +672,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@app_category",
+                                        "facet": "@checkpoint.quantum.firewall.app_category",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -849,7 +849,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@appi_name",
+                                        "facet": "@checkpoint.quantum.firewall.appi_name",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -857,7 +857,7 @@
                                         }
                                     },
                                     {
-                                        "facet": "@app_risk_str",
+                                        "facet": "@checkpoint.quantum.firewall.app_risk_str",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -915,7 +915,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@appi_name",
+                                        "facet": "@checkpoint.quantum.firewall.appi_name",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -923,7 +923,7 @@
                                         }
                                     },
                                     {
-                                        "facet": "@app_risk_str",
+                                        "facet": "@checkpoint.quantum.firewall.app_risk_str",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -982,7 +982,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@app_category",
+                                        "facet": "@checkpoint.quantum.firewall.app_category",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -991,7 +991,7 @@
                                         }
                                     },
                                     {
-                                        "facet": "@app_risk_str",
+                                        "facet": "@checkpoint.quantum.firewall.app_risk_str",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -1051,7 +1051,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@appi_name",
+                                        "facet": "@checkpoint.quantum.firewall.appi_name",
                                         "limit": 5,
                                         "sort": {
                                             "order": "desc",
@@ -1060,7 +1060,7 @@
                                         }
                                     },
                                     {
-                                        "facet": "@app_risk_str",
+                                        "facet": "@checkpoint.quantum.firewall.app_risk_str",
                                         "limit": 5,
                                         "sort": {
                                             "order": "desc",
@@ -1119,7 +1119,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@appi_name",
+                                        "facet": "@checkpoint.quantum.firewall.appi_name",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -1127,7 +1127,7 @@
                                         }
                                     },
                                     {
-                                        "facet": "@app_category",
+                                        "facet": "@checkpoint.quantum.firewall.app_category",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -1135,7 +1135,7 @@
                                         }
                                     },
                                     {
-                                        "facet": "@app_risk_str",
+                                        "facet": "@checkpoint.quantum.firewall.app_risk_str",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -1209,15 +1209,15 @@
                                 "width": "auto"
                             },
                             {
-                                "field": "appi_name",
+                                "field": "checkpoint.quantum.firewall.appi_name",
                                 "width": "auto"
                             },
                             {
-                                "field": "app_category",
+                                "field": "checkpoint.quantum.firewall.app_category",
                                 "width": "auto"
                             },
                             {
-                                "field": "app_risk_str",
+                                "field": "checkpoint.quantum.firewall.app_risk_str",
                                 "width": "auto"
                             },
                             {
@@ -1256,13 +1256,13 @@
         },
         {
             "name": "Application_Category",
-            "prefix": "@app_category",
+            "prefix": "@checkpoint.quantum.firewall.app_category",
             "available_values": [],
             "default": "*"
         },
         {
             "name": "Application_Name",
-            "prefix": "@appi_name",
+            "prefix": "@checkpoint.quantum.firewall.appi_name",
             "available_values": [],
             "default": "*"
         }
