--- a/cockroachdb/hatch.toml
+++ b/cockroachdb/hatch.toml
@@ -2,12 +2,13 @@
 
 [[envs.default.matrix]]
 python = ["2.7", "3.11"]
-version = ["2.0", "22.1"]
+version = ["2.0", "22.1", "23.2"]
 
 [envs.default.overrides]
 matrix.version.env-vars = [
   { key = "COCKROACHDB_VERSION", value = "v2.0.5", if = ["2.0"] },
   { key = "COCKROACHDB_VERSION", value = "v22.1.11", if = ["22.1"] },
+  { key = "COCKROACHDB_VERSION", value = "v23.2.2", if = ["23.2"] },
 ]
 
 [envs.default.env-vars]
