--- a/.codecov.yml
+++ b/.codecov.yml
@@ -58,6 +58,10 @@ coverage:
         target: 75
         flags:
         - argocd
+      Argo_Workflows:
+        target: 75
+        flags:
+        - argo_workflows
       Avi_Vantage:
         target: 75
         flags:
@@ -700,6 +704,11 @@ flags:
     paths:
     - arangodb/datadog_checks/arangodb
     - arangodb/tests
+  argo_workflows:
+    carryforward: true
+    paths:
+    - argo_workflows/datadog_checks/argo_workflows
+    - argo_workflows/tests
   argocd:
     carryforward: true
     paths:
