--- a/sqlserver/hatch.toml
+++ b/sqlserver/hatch.toml
@@ -15,7 +15,7 @@ setup = ["single", "ha"]
 python = ["3.11"]
 os = ["windows"]
 driver = ["SQLOLEDB", "SQLNCLI11", "MSOLEDBSQL", "odbc"]
-version = ["2019"]
+version = ["2019", "2022"]
 setup = ["single"]
 
 # The high cardinality environment is meant to be used for local dev/testing
@@ -23,7 +23,7 @@ setup = ["single"]
 # query, we can do that by uncommenting this env setup. Note, you should make sure to set you
 # DD_API_KEY in order to send the related metrics to staging for evaluation.
 #[[envs.default.matrix]]
-#python = ["3.9"]
+#python = ["3.11"]
 #os = ["linux"]
 #driver = ["odbc"]
 #version = ["2019", "2022"]
@@ -54,9 +54,9 @@ matrix.setup.env-vars = [
 matrix.version.env-vars = [
   { key = "SQLSERVER_MAJOR_VERSION" },
   { key = "SQLSERVER_ENGINE_EDITION" },
-  { key = "SQLSERVER_IMAGE_TAG", value = "2017-CU24-ubuntu-16.04", if = ["2017"], platform = ["linux"] },
-  { key = "SQLSERVER_IMAGE_TAG", value = "2019-CU11-ubuntu-16.04", if = ["2019"], platform = ["linux"] },
-  { key = "SQLSERVER_IMAGE_TAG", value = "2022-CU9-ubuntu-20.04", if = ["2022"], platform = ["linux"] },
+  { key = "SQLSERVER_IMAGE_TAG", value = "2017-latest", if = ["2017"], platform = ["linux"] },
+  { key = "SQLSERVER_IMAGE_TAG", value = "2019-latest", if = ["2019"], platform = ["linux"] },
+  { key = "SQLSERVER_IMAGE_TAG", value = "2022-latest", if = ["2022"], platform = ["linux"] },
   { key = "SQLSERVER_BASE_IMAGE", value = "datadog/docker-library:sqlserver_{matrix:version}", platform = ["windows"] },
 ]
 matrix.driver.env-vars = [
