Add the Tekton integration (#16665)
* Add the structure of the Tekton integration

* update manifest

* auto install

* Add the e2e environment

* add triggers

* lint

* sleep

* switch to the operator

* lint

* add tasks

* echo sleep

* sleep

* sh

* lint

* add pipeline run

* lint

* add pipelinerun

* Implement the check and add tests

* triggers tests

* update the config

* metrics in manifest

* update the config

* nit

* update tests

* nit

* lint

* fix

* test

* add metrics

* update manifest

* simplify

* config

* lint

* add metrics

* update tests

* add metrics

* drop optional metrics

* metadata

* add service checks

* fix

* lint

* metadata

* revert gitlab stuff

* Update tekton/datadog_checks/tekton/check.py

Co-authored-by: Ilia Kurenkov <ilia.kurenkov@datadoghq.com>

* address

* lint

* fix

* Update tekton/tests/conftest.py

Co-authored-by: Ilia Kurenkov <ilia.kurenkov@datadoghq.com>

* Update tekton/datadog_checks/tekton/check.py

* Update tekton/datadog_checks/tekton/check.py

* changelog

---------

Co-authored-by: Ilia Kurenkov <ilia.kurenkov@datadoghq.com>

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -558,6 +558,10 @@ coverage:
         target: 75
         flags:
         - teamcity
+      Tekton:
+        target: 75
+        flags:
+        - tekton
       Temporal:
         target: 75
         flags:
@@ -1361,6 +1365,11 @@ flags:
     paths:
     - teamcity/datadog_checks/teamcity
     - teamcity/tests
+  tekton:
+    carryforward: true
+    paths:
+    - tekton/datadog_checks/tekton
+    - tekton/tests
   temporal:
     carryforward: true
     paths:
