add new OMv2 dashboard for cilium

--- a/cilium/manifest.json
+++ b/cilium/manifest.json
@@ -53,7 +53,8 @@
       "auto_install": true
     },
     "dashboards": {
-      "Cilium Overview": "assets/dashboards/overview.json"
+      "Cilium Overview": "assets/dashboards/overview.json",
+      "Cilium Overview v2": "assets/dashboards/overview_v2.json"
     }
   }
 }
