--- a/postgres/assets/configuration/spec.yaml
+++ b/postgres/assets/configuration/spec.yaml
@@ -4,6 +4,14 @@ files:
   options:
   - template: init_config
     options:
+    - name: propagate_agent_tags
+      description: |
+        Set to `true` to propagate the tags from `datadog.yaml` to the check.
+        When set to `true`, the tags from `datadog.yaml` are added to the check's tags for all instances.        
+        NOTE: This option is by default opted-in. If you want to opt-out, set this option to `false`.
+      value:
+        example: true
+        type: boolean
     - template: init_config/default
   - template: instances
     options:
@@ -864,6 +872,15 @@ files:
         type: number
         example: 1800
         display_default: false
+    - name: propagate_agent_tags
+      description: |
+        Set to `true` to propagate the tags from `datadog.yaml` to the check.
+        When set to `true`, the tags from `datadog.yaml` are added to the check's tags.
+        This option takes precedence over the `propagate_agent_tags` option in `init_config`.
+        NOTE: This option is by default opted-in. If you want to opt-out, set this option to `false`.
+      value:
+        example: true
+        type: boolean
     - template: instances/default
       overrides:
         disable_generic_tags.hidden: False
