--- a/.github/workflows/release-hash-check.yml
+++ b/.github/workflows/release-hash-check.yml
@@ -26,7 +26,7 @@ jobs:
         git fetch origin master
         LAST_COMMON_COMMIT=$(git merge-base HEAD origin/master)
         FILES=$(git --no-pager diff --name-only $LAST_COMMON_COMMIT -- .in-toto | xargs echo)
-        echo "::set-output name=all::$FILES"
+        echo "all=$FILES" >> "$GITHUB_OUTPUT"
 
     - id: merge
       name: Merge branch into latest master
