--- a/datadog_checks_base/pyproject.toml
+++ b/datadog_checks_base/pyproject.toml
@@ -40,7 +40,7 @@ db = [
 deps = [
     "binary==1.0.0",
     "cachetools==3.1.1; python_version < '3.0'",
-    "cachetools==5.3.2; python_version > '3.0'",
+    "cachetools==5.3.3; python_version > '3.0'",
     "contextlib2==0.6.0.post1; python_version < '3.0'",
     "cryptography==3.3.2; python_version < '3.0'",
     "cryptography==42.0.5; python_version > '3.0'",
@@ -55,8 +55,8 @@ deps = [
     "prometheus-client==0.20.0; python_version > '3.0'",
     "protobuf==3.17.3; python_version < '3.0'",
     "protobuf==4.25.3; python_version > '3.0'",
-    "pydantic==2.0.2; python_version > '3.0'",
-    "python-dateutil==2.8.2",
+    "pydantic==2.6.3; python_version > '3.0'",
+    "python-dateutil==2.9.0.post0",
     "pywin32==228; sys_platform == 'win32' and python_version < '3.0'",
     "pywin32==306; sys_platform == 'win32' and python_version > '3.0'",
     "pyyaml==5.4.1; python_version < '3.0'",
@@ -75,7 +75,7 @@ deps = [
 http = [
     "aws-requests-auth==0.4.3",
     "botocore==1.20.112; python_version < '3.0'",
-    "botocore==1.34.49; python_version > '3.0'",
+    "botocore==1.34.59; python_version > '3.0'",
     "oauthlib==3.1.0; python_version < '3.0'",
     "oauthlib==3.2.2; python_version > '3.0'",
     "pyjwt==1.7.1; python_version < '3.0'",
@@ -85,7 +85,7 @@ http = [
     "requests-kerberos==0.14.0; python_version > '3.0'",
     "requests-ntlm==1.1.0; python_version < '3.0'",
     "requests-ntlm==1.2.0; python_version > '3.0'",
-    "requests-oauthlib==1.3.1",
+    "requests-oauthlib==1.4.0",
     "win-inet-pton==1.1.0; sys_platform == 'win32' and python_version < '3.0'",
 ]
 json = [
