--- a/twistlock/pyproject.toml
+++ b/twistlock/pyproject.toml
@@ -39,7 +39,7 @@ dynamic = [
 
 [project.optional-dependencies]
 deps = [
-    "python-dateutil==2.8.2",
+    "python-dateutil==2.9.0.post0",
 ]
 
 [project.urls]
