Automatically apply the `qa/skip-qa` to some PRs

--- a/.github/workflows/config/labeler.yml
+++ b/.github/workflows/config/labeler.yml
@@ -491,5 +491,9 @@ integration/zeek:
 - zeek/**/*
 integration/zk:
 - zk/**/*
+qa/skip-qa:
+- '**/__about__.py'
+- requirements-agent-release.txt
+- '*/CHANGELOG.md'
 release:
 - '**/__about__.py'
