--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,9 @@ repos:
       language: system
       files: '.*/assets/service_checks\.json'
       pass_filenames: false
+    - id: labeler_config
+      name: Validate labeler config
+      entry: ddev validate labeler
+      language: system
+      files: '\.github/workflows/config/labeler\.yml'
+      pass_filenames: false
