--- a/tekton/assets/monitors/increasing_failed_pipelineruns.json
+++ b/tekton/assets/monitors/increasing_failed_pipelineruns.json
@@ -6,7 +6,7 @@
   "tags": [
     "integration:tekton"
   ],
-  "description": "This monitor tracks changes in the number of failed Pipelines in your cluster.",
+  "description": "An important number of failed PipelineRuns can be the sign of an underlying bigger issue within your cluster. This monitor tracks changes in the number of failed Pipelines in your cluster and warn you if the number is increasing.",
   "definition": {
     "message": "The number of failed Pipelines is increasing.",
     "name": "[Tekton] Increasing number of failed Pipelines",
