--- a/weblogic/manifest.json
+++ b/weblogic/manifest.json
@@ -58,6 +58,11 @@
     },
     "logs": {
       "source": "weblogic"
+    },
+    "saved_views": {
+      "weblogic_error_logs": "assets/saved_views/error_logs.json",
+      "weblogic_overview": "assets/saved_views/weblogic_overview.json",
+      "weblogic_patterns": "assets/saved_views/weblogic_patterns.json"
     }
   }
 }
