Fixes after testing

--- a/.github/workflows/build-deps.yml
+++ b/.github/workflows/build-deps.yml
@@ -115,7 +115,7 @@ jobs:
         chmod +x ~/miniconda3/bin/jq
 
         echo "PATH=~/miniconda3/bin/:${PATH}" >> "$GITHUB_ENV"
-        echo "DOCKER=\"sudo docker\"" >> "$GITHUB_ENV"
+        echo DOCKER="sudo docker" >> "$GITHUB_ENV"
 
     - name: Install management dependencies
       run: |
@@ -143,6 +143,8 @@ jobs:
       run: |-
         sudo /home/runner/miniconda3/bin/python .builders/build.py ${{ matrix.job.image }} --python 3 ${{ env.OUT_DIR }}/py3
         sudo /home/runner/miniconda3/bin/python .builders/build.py ${{ matrix.job.image }} --python 2 ${{ env.OUT_DIR }}/py2
+        # Give ownership of the output back to the user
+        sudo chown ${USER} ${{ env.OUT_DIR }}
 
     - name: Pull image and build wheels (arm64)
       if: steps.changed-files.outputs.builders_any_changed != 'true' && matrix.job.image == 'linux-aarch64'
