--- a/.ddev/config.toml
+++ b/.ddev/config.toml
@@ -155,6 +155,13 @@ exclude = [
     'system_swap',
     'tcp_check',
 ]
+unsorted = [
+    'couch', # tests depend on the order for now
+    'envoy',
+    'ibm_ace',
+    'istio',
+    'otel',
+]
 
 [overrides.dep.updates]
 exclude = [
