--- a/datadog_checks_base/datadog_checks/base/data/agent_requirements.in
+++ b/datadog_checks_base/datadog_checks/base/data/agent_requirements.in
@@ -89,7 +89,8 @@ requests-kerberos==0.12.0; python_version < '3.0'
 requests-kerberos==0.14.0; python_version > '3.0'
 requests-ntlm==1.1.0; python_version < '3.0'
 requests-ntlm==1.2.0; python_version > '3.0'
-requests-oauthlib==1.3.1
+requests-oauthlib==1.3.1; python_version < '3.0'
+requests-oauthlib==1.4.0; python_version > '3.0'
 requests-toolbelt==1.0.0
 requests-unixsocket==0.3.0
 requests==2.27.1; python_version < '3.0'
