--- a/kube_controller_manager/hatch.toml
+++ b/kube_controller_manager/hatch.toml
@@ -7,6 +7,7 @@ base-package-features = [
 [envs.default]
 dependencies = [
   "requests-mock==1.4.0",
+  "requests-oauthlib==1.3.1; python_version < '3.0'",
 ]
 
 [[envs.default.matrix]]
