--- a/kube_scheduler/hatch.toml
+++ b/kube_scheduler/hatch.toml
@@ -10,6 +10,7 @@ python = ["2.7", "3.11"]
 [envs.default]
 dependencies = [
   "requests-mock==1.4.0",
+  "requests-oauthlib==1.3.1; python_version < '3.0'",
 ]
 
 [envs.default.env-vars]
