--- a/nginx/datadog_checks/nginx/data/conf.yaml.example
+++ b/nginx/datadog_checks/nginx/data/conf.yaml.example
@@ -437,6 +437,7 @@ instances:
     ## @param disable_generic_tags - boolean - optional - default: false
     ## Generic tags such as `cluster` will be replaced by <integration_name>_cluster to avoid
     ## getting mixed with other integration tags.
+    ## Note that this is only relevant to service check submissions. Metrics do not include any generic tags.
     #
     disable_generic_tags: true
 
