--- a/tekton/manifest.json
+++ b/tekton/manifest.json
@@ -14,7 +14,9 @@
     "classifier_tags": [
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Category::Log Collection",
+      "Category::Developer Tools"
     ]
   },
   "assets": {
@@ -39,6 +41,21 @@
       "service_checks": {
         "metadata_path": "assets/service_checks.json"
       }
+    },
+    "dashboards": {
+      "Tekton Overview": "assets/dashboards/overview.json"
+    },
+    "monitors": {
+      "[Tekton] High number of throttled TaskRuns": "assets/monitors/throttled_taskruns.json",
+      "[Tekton] Increasing number of failed TaskRuns": "assets/monitors/increasing_failed_taskruns.json",
+      "[Tekton] Increasing number of failed PieplineRuns": "assets/monitors/increasing_failed_pipelineruns.json"
+    },
+    "logs": {
+      "source": "tekton"
+    },
+    "saved_views": {
+      "tekton_overview": "assets/saved_views/tekton_overview.json",
+      "tekton_errors": "assets/saved_views/tekton_errors.json"
     }
   },
   "author": {
