--- a/esxi/pyproject.toml
+++ b/esxi/pyproject.toml
@@ -37,7 +37,7 @@ dynamic = [
 
 [project.optional-dependencies]
 deps = [
-    "pyvmomi==8.0.2.0.1",
+    "pyvmomi==8.0.2.0.1; python_version > '3.0'",
 ]
 
 [project.urls]
