Add labeler configuration

--- a/.github/workflows/config/labeler.yml
+++ b/.github/workflows/config/labeler.yml
@@ -155,6 +155,8 @@ integration/elastic:
 - elastic/**/*
 integration/envoy:
 - envoy/**/*
+integration/esxi:
+- esxi/**/*
 integration/etcd:
 - etcd/**/*
 integration/exchange_server:
