[Release] Cisco Secure Firewall v1.0.0 (#16747)
* Added initial structure for cisco-secure-firewall integration

* Update manifest and changelog

* Add dashboards, screenshots and logo

* Update readme and changelog files

* Resolve ci failures

* Removed unused image

* Update dashboards

* Fix changelog issue

* Resolve changelog issue

* Address review comments

* Fix logs failures

* Update pipline test results

* Add units in yaml file

* Update labeler yml

* Empty commit to rerun validate-assets

* Update pipeline, dashboards and attributes path

* Update test results

* Fix validate-logs failure

* Fix ci failures

* Minor updates in pipeline and dashboard

* Fix: Updating facets, pipeline and dashboards

* Fix: Updated log test results

* Fix: Updated type of network bytes facets

* Fix: Updated display name of bytes_read facet

---------

Co-authored-by: nisargshah_crest <nisarg@crestdatasys.com>

--- a/.github/workflows/config/labeler.yml
+++ b/.github/workflows/config/labeler.yml
@@ -91,6 +91,8 @@ integration/cisco_aci:
 - cisco_aci/**/*
 integration/cisco_duo:
 - cisco_duo/**/*
+integration/cisco_secure_firewall:
+- cisco_secure_firewall/**/*
 integration/cisco_umbrella_dns:
 - cisco_umbrella_dns/**/*
 integration/citrix_hypervisor:
