argo workflows name
Co-authored-by: Florent Clarret <florent.clarret@datadoghq.com>
Co-authored-by: jhgilbert <jen.gilbert@datadoghq.com>

--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -375,7 +375,7 @@ jobs:
   jea02f7c:
     uses: ./.github/workflows/test-target.yml
     with:
-      job-name: Argo_Workflows
+      job-name: Argo Workflows
       target: argo_workflows
       platform: linux
       runner: '["ubuntu-22.04"]'
