--- a/argo_workflows/pyproject.toml
+++ b/argo_workflows/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "datadog-argo-workflows"
-description = "The Argo_Workflows check"
+description = "The Argo Workflows check"
 readme = "README.md"
 license = "BSD-3-Clause"
 requires-python = ">=3.9"
