add auto-detection metric

--- a/argo_workflows/manifest.json
+++ b/argo_workflows/manifest.json
@@ -31,7 +31,9 @@
       },
       "metrics": {
         "prefix": "argo_workflows.",
-        "check": "",
+        "check": [
+          "argo_workflows.go.info"
+        ],
         "metadata_path": "metadata.csv"
       },
       "service_checks": {
