--- a/.github/workflows/config/labeler.yml
+++ b/.github/workflows/config/labeler.yml
@@ -61,6 +61,8 @@ integration/arangodb:
 - arangodb/**/*
 integration/argo_rollouts:
 - argo_rollouts/**/*
+integration/argo_workflows:
+- argo_workflows/**/*
 integration/argocd:
 - argocd/**/*
 integration/aspdotnet:
